# getitdone-api

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_gemini_tools.py
.next/: trace  trace-build
.sisyphus/: boulder.json
.sisyphus/notepads/ai-feature-rebuild/: deployment.md  issues.md  learnings.md  phase6-integration.md  phase7-deployment.md  phase8-cleanup.md
.sisyphus/notepads/getitdone-api-enhancements/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/wave-0/: learnings.md
.sisyphus/plans/: ai-feature-rebuild.md
docs/: OPENCODE_COMPARISON.md
sql/: 001_opencode_tables.sql  002_add_reasoning_and_tool_status.sql  003_add_parent_id.sql  004_add_step_parts.sql  005_add_compaction_fields.sql  006_add_session_cost_fields.sql
src/__tests__/: example.test.ts
src/opencode_api/: __init__.py
src/opencode_api/agent/: __init__.py  agent.py
src/opencode_api/core/: __init__.py  auth.py  bus.py  config.py  identifier.py  quota.py  storage.py  supabase.py
src/opencode_api/provider/: __init__.py  anthropic.py  gemini.py  litellm.py  openai.py  provider.py
src/opencode_api/routes/: __init__.py  agent.py  event.py  provider.py  question.py  session.py
src/opencode_api/session/: __init__.py  compaction.py  message.py  processor.py  prompt.py  session.py
src/opencode_api/tool/: __init__.py  question.py  registry.py  skill.py  todo.py  tool.py  webfetch.py  (+1 more)
tests/: test_agents.py  test_compaction.py  test_session_costs.py  test_step_parts.py  test_token.py
(+6 files in other folders)
