[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-api"
version = "0.1.0"
description = "LLM Agent API Server - ported from TypeScript opencode"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenCode Team" }
]
keywords = ["llm", "api", "agent", "fastapi", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "python-ulid>=2.2.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "duckduckgo-search>=6.0.0",
    "html2text>=2024.2.26",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/opencode"
Documentation = "https://opencode.ai"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
